--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <img src="assets/icons/claude.png" alt="Claude" width="32" height="32">
     </button>
     <button onclick="showTab('copilot')">
-      <img src="assets/icons/mscopilot.png" alt="MS-Copilot" width="32" height="32">
+      <img src="assets/icons/mscopilot.png" alt="MS Copilot" width="32" height="32">
     </button>
     <button onclick="showTab('deepseek')">
       <img src="assets/icons/deepseek.png" alt="DeepSeek" width="32" height="32">
