--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>IA Hub</title>
+  <title>AI Interaction Hub</title>
   <style>
     body {
       margin: 0;
