--- a/index.html
+++ b/index.html
@@ -4,41 +4,70 @@
 <head>
   <meta charset="UTF-8" />
   <title>AI Interaction Hub</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="renderer.js"></script>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/renderer.js"></script>
 </head>
 
 <body>
-  <div id="sidebar">
-    <button id="btn-chatgpt" onclick="showTab('chatgpt')">
-      <img src="assets/icons/chatgpt.png" alt="ChatGPT" width="32" height="32">
-    </button>
-    <button id="btn-claude" onclick="showTab('claude')">
-      <img src="assets/icons/claude.png" alt="Claude" width="32" height="32">
-    </button>
-    <button id="btn-copilot" onclick="showTab('copilot')">
-      <img src="assets/icons/mscopilot.png" alt="MS Copilot" width="32" height="32">
-    </button>
-    <button id="btn-deepseek" onclick="showTab('deepseek')">
-      <img src="assets/icons/deepseek.png" alt="DeepSeek" width="32" height="32">
-    </button>
-    <button id="btn-gemini" onclick="showTab('gemini')">
-      <img src="assets/icons/gemini.png" alt="Gemini" width="32" height="32">
-    </button>
-    <button id="btn-grok" onclick="showTab('grok')">
-      <img src="assets/icons/grok.png" alt="Grok" width="32" height="32">
-    </button>
+  <!-- Barra de Menu -->
+  <div id="menu-bar">
+    <div class="menu-item">
+      <span onclick="toggleMenu('arquivo')">Arquivo</span>
+      <div id="arquivo-menu" class="dropdown-menu">
+        <div class="menu-option" onclick="exitApp()">Sair</div>
+      </div>
+    </div>
+    <div class="menu-item">
+      <span onclick="toggleMenu('ajuda')">Ajuda</span>
+      <div id="ajuda-menu" class="dropdown-menu">
+        <div class="menu-option" onclick="showAbout()">Sobre</div>
+      </div>
+    </div>
   </div>
 
-  <div id="webview-container">
-    <webview id="chatgpt" src="https://chat.openai.com" class="active" partition="persist:chatgpt"></webview>
-    <webview id="claude" src="https://claude.ai" partition="persist:claude"></webview>
-    <webview id="copilot" src="https://copilot.microsoft.com" partition="persist:copilot"
-      useragent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36">
-    </webview>
-    <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek"></webview>
-    <webview id="gemini" src="https://gemini.google.com" partition="persist:gemini"></webview>
-    <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
+  <!-- Modal Sobre -->
+  <div id="about-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="hideAbout()">&times;</span>
+      <h2>AI Interaction Hub</h2>
+      <p><strong>Desenvolvido por:</strong> [Seu Nome]</p>
+      <p><strong>Ano:</strong> 2025</p>
+      <p>Uma interface unificada para interagir com múltiplos assistentes de IA.</p>
+    </div>
+  </div>
+
+  <div id="main-content">
+    <div id="sidebar">
+      <button id="btn-chatgpt" onclick="showTab('chatgpt')">
+        <img src="assets/icons/chatgpt.png" alt="ChatGPT" width="32" height="32">
+      </button>
+      <button id="btn-claude" onclick="showTab('claude')">
+        <img src="assets/icons/claude.png" alt="Claude" width="32" height="32">
+      </button>
+      <button id="btn-copilot" onclick="showTab('copilot')">
+        <img src="assets/icons/mscopilot.png" alt="MS Copilot" width="32" height="32">
+      </button>
+      <button id="btn-deepseek" onclick="showTab('deepseek')">
+        <img src="assets/icons/deepseek.png" alt="DeepSeek" width="32" height="32">
+      </button>
+      <button id="btn-gemini" onclick="showTab('gemini')">
+        <img src="assets/icons/gemini.png" alt="Gemini" width="32" height="32">
+      </button>
+      <button id="btn-grok" onclick="showTab('grok')">
+        <img src="assets/icons/grok.png" alt="Grok" width="32" height="32">
+      </button>
+    </div>
+
+    <div id="webview-container">
+      <webview id="chatgpt" src="https://chat.openai.com" class="active" partition="persist:chatgpt"></webview>
+      <webview id="claude" src="https://claude.ai" partition="persist:claude"></webview>
+      <webview id="copilot" src="https://copilot.microsoft.com" partition="persist:copilot"
+        useragent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36">
+      </webview>
+      <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek"></webview>
+      <webview id="gemini" src="https://gemini.google.com" partition="persist:gemini"></webview>
+      <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
+    </div>
   </div>
 </body>
 
