--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <h2>AI Interaction Hub</h2>
       <p><strong>Desenvolvido por:</strong> [Alessandro Willian]</p>
       <p><strong>Ano:</strong> 2025</p>
+      <p><strong>GitHub:</strong> http://github.com/awilliansd</p>
       <p>Uma interface unificada para interagir com múltiplos assistentes de IA.</p>
     </div>
   </div>
