--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
     </div>
   </div>
 
-  <!-- Modal Sobre -->
+  <!-- Modal Configurações -->
+  <div id="settings-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="hideSettings()">&times;</span>
+      <h2>Configurações</h2>
+      
+      <div class="setting-item">
+        <label class="setting-label">
+          <input type="checkbox" id="minimize-to-tray" onchange="toggleMinimizeToTray()">
+          <span class="checkmark"></span>
+          Minimizar para a bandeja do sistema
+        </label>
+        <p class="setting-description">Quando ativado, fechar a janela manterá o aplicativo em execução na bandeja do sistema.</p>
+      </div>
+
+      <div class="setting-item">
+        <h3>Atalhos de Teclado</h3>
+        <p class="shortcut-info"><strong>Ctrl + R:</strong> Recarregar aba atual</p>
+        <p class="shortcut-info"><strong>Botão direito:</strong> Menu de contexto nas abas</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Menu de Contexto das Abas -->
+  <div id="tab-context-menu" class="context-menu">
+    <div class="context-option" onclick="reloadCurrentTab()">Recarregar</div>
+  </div>
   <div id="about-modal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="hideAbout()">&times;</span>
@@ -39,27 +65,37 @@
 
   <div id="main-content">
     <div id="sidebar">
-      <button id="btn-chatgpt" onclick="showTab('chatgpt')">
-        <img src="assets/icons/chatgpt.png" alt="ChatGPT" width="32" height="32">
-      </button>
-      <button id="btn-claude" onclick="showTab('claude')">
-        <img src="assets/icons/claude.png" alt="Claude" width="32" height="32">
-      </button>
-      <button id="btn-copilot" onclick="showTab('copilot')">
-        <img src="assets/icons/mscopilot.png" alt="MS Copilot" width="32" height="32">
-      </button>
-      <button id="btn-deepseek" onclick="showTab('deepseek')">
-        <img src="assets/icons/deepseek.png" alt="DeepSeek" width="32" height="32">
-      </button>
-      <button id="btn-gemini" onclick="showTab('gemini')">
-        <img src="assets/icons/gemini.png" alt="Gemini" width="32" height="32">
-      </button>
-      <button id="btn-grok" onclick="showTab('grok')">
-        <img src="assets/icons/grok.png" alt="Grok" width="32" height="32">
-      </button>
-      <button id="btn-metaai" onclick="showTab('metaai')">
-        <img src="assets/icons/metaai.png" alt="Meta AI" width="32" height="32">
-      </button>
+      <div class="sidebar-top">
+        <button id="btn-chatgpt" onclick="showTab('chatgpt')" oncontextmenu="showTabContextMenu(event, 'chatgpt')">
+          <img src="assets/icons/chatgpt.png" alt="ChatGPT" width="32" height="32">
+        </button>
+        <button id="btn-claude" onclick="showTab('claude')" oncontextmenu="showTabContextMenu(event, 'claude')">
+          <img src="assets/icons/claude.png" alt="Claude" width="32" height="32">
+        </button>
+        <button id="btn-copilot" onclick="showTab('copilot')" oncontextmenu="showTabContextMenu(event, 'copilot')">
+          <img src="assets/icons/mscopilot.png" alt="MS Copilot" width="32" height="32">
+        </button>
+        <button id="btn-deepseek" onclick="showTab('deepseek')" oncontextmenu="showTabContextMenu(event, 'deepseek')">
+          <img src="assets/icons/deepseek.png" alt="DeepSeek" width="32" height="32">
+        </button>
+        <button id="btn-gemini" onclick="showTab('gemini')" oncontextmenu="showTabContextMenu(event, 'gemini')">
+          <img src="assets/icons/gemini.png" alt="Gemini" width="32" height="32">
+        </button>
+        <button id="btn-grok" onclick="showTab('grok')" oncontextmenu="showTabContextMenu(event, 'grok')">
+          <img src="assets/icons/grok.png" alt="Grok" width="32" height="32">
+        </button>
+        <button id="btn-metaai" onclick="showTab('metaai')" oncontextmenu="showTabContextMenu(event, 'metaai')">
+          <img src="assets/icons/metaai.png" alt="Meta AI" width="32" height="32">
+        </button>
+      </div>
+      
+      <div class="sidebar-bottom">
+        <button id="btn-settings" onclick="showSettings()" title="Configurações">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+            <path d="M12 15.5A3.5 3.5 0 0 1 8.5 12A3.5 3.5 0 0 1 12 8.5a3.5 3.5 0 0 1 3.5 3.5a3.5 3.5 0 0 1-3.5 3.5m7.43-2.53c.04-.32.07-.64.07-.97c0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1c0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z"/>
+          </svg>
+        </button>
+      </div>
     </div>
 
     <div id="webview-container">
@@ -71,7 +107,7 @@
       <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek"></webview>
       <webview id="gemini" src="https://gemini.google.com" partition="persist:gemini"></webview>
       <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
-      <webview id="metaai" src="https://www.meta.ai/" partition="persist:metaai"></webview>
+      <webview id="metaai" src="https://www.meta.ai" partition="persist:metaai"></webview>
     </div>
   </div>
 </body>
