--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="modal-content">
       <span class="close" onclick="hideAbout()">&times;</span>
       <h2>AI Interaction Hub</h2>
-      <p><strong>Desenvolvido por:</strong> [Seu Nome]</p>
+      <p><strong>Desenvolvido por:</strong> [Alessandro Willian]</p>
       <p><strong>Ano:</strong> 2025</p>
       <p><strong>GitHub:</strong> <a href="#" onclick="openGitHub()" class="github-link">github.com/awilliansd</a></p>
       <p>Uma interface unificada para interagir com múltiplos assistentes de IA.</p>
