--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
     <div class="modal-content">
       <span class="close" onclick="hideSettings()">&times;</span>
       <h2>Configurações</h2>
-      
+
       <div class="setting-item">
         <label class="setting-label">
           <input type="checkbox" id="minimize-to-tray" onchange="toggleMinimizeToTray()">
           <span class="checkmark"></span>
           Minimizar para a bandeja do sistema
         </label>
-        <p class="setting-description">Quando ativado, fechar a janela manterá o aplicativo em execução na bandeja do sistema.</p>
+        <p class="setting-description">Quando ativado, fechar a janela manterá o aplicativo em execução na bandeja do
+          sistema.</p>
       </div>
 
       <div class="setting-item">
@@ -88,11 +89,12 @@
           <img src="assets/icons/metaai.png" alt="Meta AI" width="32" height="32">
         </button>
       </div>
-      
+
       <div class="sidebar-bottom">
         <button id="btn-settings" onclick="showSettings()" title="Configurações">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-            <path d="M12 15.5A3.5 3.5 0 0 1 8.5 12A3.5 3.5 0 0 1 12 8.5a3.5 3.5 0 0 1 3.5 3.5a3.5 3.5 0 0 1-3.5 3.5m7.43-2.53c.04-.32.07-.64.07-.97c0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1c0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z"/>
+            <path
+              d="M12 15.5A3.5 3.5 0 0 1 8.5 12A3.5 3.5 0 0 1 12 8.5a3.5 3.5 0 0 1 3.5 3.5a3.5 3.5 0 0 1-3.5 3.5m7.43-2.53c.04-.32.07-.64.07-.97c0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1c0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z" />
           </svg>
         </button>
       </div>
@@ -108,6 +110,11 @@
       <webview id="gemini" src="https://gemini.google.com" partition="persist:gemini"></webview>
       <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
       <webview id="metaai" src="https://www.meta.ai" partition="persist:metaai"></webview>
+    </div>
+
+    <div id="context-menu" style="display: none; position: absolute; z-index: 1000;" class="context-menu">
+      <div class="context-option" onclick="closeCurrentTab()">Fechar</div>
+      <div class="context-option" onclick="duplicateCurrentTab()">Duplicar</div>
     </div>
   </div>
 </body>
