--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         <button id="btn-metaai" onclick="showTab('metaai')" oncontextmenu="showTabContextMenu(event, 'metaai')">
           <img src="assets/icons/metaai.png" alt="Meta AI" width="32" height="32">
         </button>
+        <button id="btn-manus" onclick="showTab('manus')" oncontextmenu="showTabContextMenu(event, 'manus')">
+          <img src="assets/icons/manus.png" alt="Manus" width="32" height="32">
+        </button>
       </div>
 
       <div class="sidebar-bottom">
@@ -109,6 +112,7 @@
       <webview id="gemini" src="https://gemini.google.com" partition="persist:gemini"></webview>
       <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
       <webview id="metaai" src="https://www.meta.ai" partition="persist:metaai"></webview>
+      <webview id="manus" src="https://manus.im/app" partition="persist:manus"></webview>
     </div>
 
     <div id="context-menu" style="display: none; position: absolute; z-index: 1000;" class="context-menu">
