Correção no recarregamento da aba

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 
   <!-- Menu de Contexto das Abas -->
   <div id="tab-context-menu" class="context-menu">
-    <!-- Ação de recarregar agora é feita pelo menu principal (CTRL+R) -->
-    <!-- <div class="context-option" onclick="reloadCurrentTab()">Recarregar</div> -->
-    <div class="context-option" onclick="/* Adicionar outras ações se necessário */">Opção 1</div>
+    <div class="context-option" onclick="reloadCurrentTab()">Recarregar</div>
   </div>
 
   <!-- Modal Sobre -->
