--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <span class="close" onclick="hideAbout()">&times;</span>
       <h2>AI Interaction Hub</h2>
       <p><strong>Desenvolvido por:</strong> [Alessandro Willian]</p>
-      <p><strong>Ano:</strong> 2025</p>
+      <p><strong>Ano:</strong> <span id="current-year"></span></p>
       <p><strong>Versão:</strong> <span id="app-version">...</span></p>
       <p><strong>GitHub:</strong> <a href="#" onclick="openGitHub()" class="github-link">github.com/awilliansd</a></p>
       <p>Uma interface unificada para interagir com múltiplos assistentes de IA.</p>
