Correção na url do Gemini

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         useragent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36">
       </webview>
       <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek"></webview>
-      <webview id="gemini" src="https://gemini.google.com" partition="persist:gemini"></webview>
+      <webview id="gemini" src="https://gemini.google.com/app" partition="persist:gemini"></webview>
       <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
       <webview id="metaai" src="https://www.meta.ai" partition="persist:metaai"></webview>
       <webview id="perplexity" src="https://www.perplexity.ai" partition="persist:perplexity"></webview>
