--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <button id="btn-metaai" onclick="showTab('metaai')" oncontextmenu="showTabContextMenu(event, 'metaai')">
           <img src="assets/icons/metaai.png" alt="Meta AI" width="32" height="32">
         </button>
-        <button id="btn-perplexity" onclick="showTab('perplexity')" oncontextmenu="showTabContextMenu(event, 'perplexity')">
+        <button id="btn-perplexity" onclick="showTab('perplexity')"
+          oncontextmenu="showTabContextMenu(event, 'perplexity')">
           <img src="assets/icons/perplexity.png" alt="Perplexity" width="32" height="32">
         </button>
         <button id="btn-manus" onclick="showTab('manus')" oncontextmenu="showTabContextMenu(event, 'manus')">
@@ -102,17 +103,16 @@
     </div>
 
     <div id="webview-container">
-      <webview id="chatgpt" src="https://chat.openai.com" class="active" partition="persist:chatgpt"></webview>
-      <webview id="claude" src="https://claude.ai" partition="persist:claude"></webview>
-      <webview id="copilot" src="https://copilot.microsoft.com" partition="persist:copilot"
-        useragent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36">
-      </webview>
-      <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek"></webview>
-      <webview id="gemini" src="https://gemini.google.com/app" partition="persist:gemini"></webview>
-      <webview id="grok" src="https://grok.com" partition="persist:grok"></webview>
-      <webview id="metaai" src="https://www.meta.ai" partition="persist:metaai"></webview>
-      <webview id="perplexity" src="https://www.perplexity.ai" partition="persist:perplexity"></webview>
-      <webview id="manus" src="https://manus.im/app" partition="persist:manus"></webview>
+      <!-- Adicionado 'allowpopups' a todas as webviews -->
+      <webview id="chatgpt" src="https://chat.openai.com" class="active" partition="persist:chatgpt" allowpopups></webview>
+      <webview id="claude" src="https://claude.ai" partition="persist:claude" allowpopups></webview>
+      <webview id="copilot" src="https://copilot.microsoft.com" partition="persist:copilot" allowpopups></webview>
+      <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek" allowpopups></webview>
+      <webview id="gemini" src="https://gemini.google.com/app" partition="persist:gemini" allowpopups></webview>
+      <webview id="grok" src="https://grok.com" partition="persist:grok" allowpopups></webview>
+      <webview id="metaai" src="https://www.meta.ai" partition="persist:metaai" allowpopups></webview>
+      <webview id="perplexity" src="https://www.perplexity.ai" partition="persist:perplexity" allowpopups></webview>
+      <webview id="manus" src="https://manus.im/app" partition="persist:manus" allowpopups></webview>
     </div>
 
     <!-- Menu de Contexto Genérico (parece não usado) -->
