Correção de aba ativa

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
      <div id="webview-container">
       <!-- Adicionado 'allowpopups' a todas as webviews -->
       <webview id="gemini" src="https://gemini.google.com/app" partition="persist:gemini" allowpopups></webview>
-      <webview id="chatgpt" src="https://chat.openai.com" class="active" partition="persist:chatgpt" allowpopups></webview>
+      <webview id="chatgpt" src="https://chat.openai.com" partition="persist:chatgpt" allowpopups></webview>
       <webview id="claude" src="https://claude.ai" partition="persist:claude" allowpopups></webview>
       <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek" allowpopups></webview>
       <webview id="grok" src="https://grok.com" partition="persist:grok" allowpopups></webview>
