--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
       </div>
 
       <div class="sidebar-bottom">
+        <button id="btn-clear-cache" onclick="clearAppCache()" title="Limpar Cache e Reiniciar" style="margin-bottom: 10px;">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="white">
+            <path d="M19.36 2.72l1.42 1.42-1.42 1.42-1.42-1.42 1.42-1.42m-14.72 0l1.42 1.42-1.42 1.42-1.42-1.42 1.42-1.42M12 6c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"/>
+          </svg>
+        </button>
         <button id="btn-settings" onclick="showSettings()" title="Configurações">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
             <path
