Correção de webview e preload do deepseek, versão 1.0.29

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <webview id="gemini" src="https://gemini.google.com/app" partition="persist:gemini" allowpopups></webview>
       <webview id="chatgpt" src="https://chat.openai.com" partition="persist:chatgpt" allowpopups></webview>
       <webview id="claude" src="https://claude.ai" partition="persist:claude" allowpopups></webview>
-      <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek" allowpopups></webview>
+      <webview id="deepseek" src="https://chat.deepseek.com" partition="persist:deepseek" allowpopups preload="./assets/js/deepseek-preload.js"></webview>
       <webview id="grok" src="https://grok.com" partition="persist:grok" allowpopups></webview>
       <webview id="manus" src="https://manus.im/app" partition="persist:manus" allowpopups></webview>
       <webview id="copilot" src="https://copilot.microsoft.com" partition="persist:copilot" allowpopups></webview>
